Add Identity functionality to JWT authentication

--- a/QuizApp-API/QuizApp-API/appsettings.json
+++ b/QuizApp-API/QuizApp-API/appsettings.json
@@ -10,5 +10,8 @@
     "Audience": "https://localhost:7118",
     "Key": "3d3db14f40b6c3d9c1b63b3d63d63911"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuizAppAPI_ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizApp-API;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
