--- a/QuizApp-API/QuizApp-API/appsettings.json
+++ b/QuizApp-API/QuizApp-API/appsettings.json
@@ -12,6 +12,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuizAppAPI_ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizApp-API;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QuizAppAPI_ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizApp-API;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MongoDb_ConnectionString": "mongodb://localhost:27017;QuizAppDb"
   }
 }
