moved to PostgreSQL

--- a/QuizApp-API/QuizApp-API/appsettings.json
+++ b/QuizApp-API/QuizApp-API/appsettings.json
@@ -11,8 +11,8 @@
     "Key": "3d3db14f40b6c3d9c1b63b3d63d63911"
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "QuizAppAPI_ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizApp-API;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MongoDb_ConnectionString": "mongodb://localhost:27017;QuizAppDb"
-  }
+    "ConnectionStrings": {
+        "QuizAppAPI_ContextConnection": "Server=localhost;Port=5432;Database=QuizAppIdentities;User Id=simple_user;Password=88888888;",
+        "MongoDb_ConnectionString": "mongodb://localhost:27017;QuizzesDb"
+    }
 }
