new db + quiz rates service and repo + tests

--- a/QuizApp-API/QuizApp-API/appsettings.json
+++ b/QuizApp-API/QuizApp-API/appsettings.json
@@ -12,7 +12,9 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "QuizAppAPI_ContextConnection": "Server=localhost;Port=5432;Database=QuizAppIdentities;User Id=simple_user;Password=88888888;",
+        "QuizAppIdentitiesDb": "Server=localhost;Port=5432;Database=QuizAppIdentities;User Id=simple_user;Password=88888888;",
+        "QuizAppDb": "Server=localhost;Port=5432;Database=QuizAppDb;User Id=simple_user;Password=88888888;",
+
         "MongoDb_ConnectionString": "mongodb://localhost:27017;QuizzesDb"
     }
 }
