back-end user profile reworked (not fully tested) + redis cache on quizzes controller added

--- a/QuizApp-API/QuizApp-API/appsettings.json
+++ b/QuizApp-API/QuizApp-API/appsettings.json
@@ -14,7 +14,7 @@
     "ConnectionStrings": {
         "QuizAppIdentitiesDb": "Server=localhost;Port=5432;Database=QuizAppIdentities;User Id=simple_user;Password=88888888;",
         "QuizAppDb": "Server=localhost;Port=5432;Database=QuizAppDb;User Id=simple_user;Password=88888888;",
-
+        "RedisDb": "localhost",
         "MongoDb_ConnectionString": "mongodb://localhost:27017;QuizzesDb"
     }
 }
