--- a/QuizApp-API/QuizApp-API.BusinessLogic/QuizApp-API.BusinessLogic.csproj
+++ b/QuizApp-API/QuizApp-API.BusinessLogic/QuizApp-API.BusinessLogic.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.2.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
