--- a/QuizApp-API/QuizApp-API.BusinessLogic/QuizApp-API.BusinessLogic.csproj
+++ b/QuizApp-API/QuizApp-API.BusinessLogic/QuizApp-API.BusinessLogic.csproj
@@ -8,9 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\placeholder.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\placeholder.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.2.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.7" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
